# easy_config

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/src/: expression.rs  try_parse_me.ezc
core/src/parser/: mod.rs  parser_error.rs
core/src/serialization/: error.rs  mod.rs  primitives.rs  string_extention.rs  tuples.rs
derive/: Cargo.toml
derive/src/: deserialize_helpers.rs  helpers.rs  lib.rs  scratch_1.rs  serialize_helpers.rs  shared.rs
derive/tests/: commented_derive.rs  config_full_loop.rs  enum_tests.rs  kinda_complex.rs  named_struct.rs  serialize.rs  struct_with_named_fields.rs  unit_struct.rs  unnamed_struct.rs
easy_config/: Cargo.toml
easy_config/src/: expression.rs  expression_iterator.rs  lexical_range.rs  lexical_span.rs  lib.rs  location.rs
easy_config/src/config_error/: describe.rs  mod.rs
easy_config/src/lexer/: mod.rs  token.rs
easy_config/src/parser/: mod.rs  parser_error.rs
easy_config/src/serialization/: collections.rs  deserialize_enum.rs  enum_helpers.rs  error.rs  mod.rs  option.rs  option_span_combine.rs  primitives.rs  serialization_error.rs  string_extension.rs  tuples.rs
src/: expression.rs  lib.rs  str_extensions.rs  try_parse_me.ezc
src/config/: error.rs  mod.rs  primitives.rs  tuples.rs
src/lexer/: eat_and_expect.rs  mod.rs  str_extensions.rs  token.rs
src/parser/: expression.rs  mod.rs
src/serialization/: deserialization_iter.rs  deserialize.rs  error.rs  mod.rs  primitives.rs  tuples.rs
tests/: Cargo.toml
tests/src/: complex_enum.rs  has_a_generic.rs  lib.rs  named_fields.rs  no_argument_enum.rs  simple_enum.rs  single_field_enum.rs  unnamed_fields.rs  use_case.rs
