[package]
name = "easy_config"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0"
description = "A language, parser, and lexer designed to make easy to read and write configuration files."
homepage = "https://github.com/Syst3mz/easy_config"
repository = "https://github.com/Syst3mz/easy_config"
readme = "README.md"
categories = ["config"]
keywords = ["config"]

[workspace]
members = ["core", "derive"]

[dependencies]
core = {path = "core"}
derive = {path = "derive", optional = true}

[features]
derive = ["dep:derive"]