[package]
name = "easy_config_core"
version = "0.2.1"
edition = "2021"

license = "GPL-3.0"
description = "A language, parser, and lexer designed to make easy to read and write configuration files."
homepage = "https://github.com/Syst3mz/easy_config"
repository = "https://github.com/Syst3mz/easy_config"
readme = "../README.md"
categories = ["config"]
keywords = ["config"]

[dependencies]